--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.url = jdbc:mysql://localhost:3306/ordersdelivery?allowPublicKe
 spring.datasource.username = root
 spring.datasource.password = 123qweASD
 
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 spring.jpa.show-sql=true
