--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,11 @@
 			<version>20220320</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
